# sqlsec

./: .rustfmt.toml  Cargo.toml  README.md  ROADMAP.md
.gitea/workflows/: pipeline.yaml
.github/workflows/: deploy.yaml  pipeline.yaml
lazytest/: Cargo.toml
lazytest/src/: main.rs
sqlevfs/: Cargo.toml  build.rs
sqlevfs/src/: backup.rs  io.rs  keyring.rs  lib.rs  vfs.rs
sqlevfs/src/crypto/: envelope.rs  keys.rs  mod.rs  page.rs
sqlevfs/src/kms/: cloud.rs  local.rs  mod.rs
sqlsec/: Cargo.toml  README.md
sqlsec/src/: init.rs  lib.rs
sqlsec/src/context/: mod.rs
sqlsec/src/label/: define.rs  evaluate.rs  mod.rs  parse.rs
sqlsec/src/register/: clear_context.rs  define_level.rs  label_visible.rs  mod.rs  pop_context.rs  (+1 more)
sqlshim/: Cargo.toml  README.md
sqlshim/src/: lib.rs
src/: authorizer.rs  context.rs  ffi.rs  init.rs  label.rs  lib.rs  register.rs  views.rs
src/context/: ctx_stack.rs  sec_ctx.rs
src/label/: define.rs  evaluate.rs  mod.rs  parse.rs
src/register/: assert_fresh.rs  define_label.rs  mod.rs  refresh_views.rs  register_table.rs  row_visible.rs  set_attr.rs
src/views/: bump_generation.rs  mod.rs  refresh_views.rs  register_table.rs  write_triggers.rs
tests/: integration.rs
tests/cases/: column_security.sql  context_stack.sql  hidden_columns.sql  label_forgery.sql  level_security.sql  modify_trigger_transaction.sql  row_security.sql  stale_view.sql  update_security.sql
tests/expected/: context_stack.out  modify_trigger_transaction.err  update_constraints.err  update_constraints.out  update_security.err  update_security.out
(+26 files in other folders)
